php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #30446 virtual() includes files out of sequence
Submitted: 2004-10-15 12:25 UTC Modified: 2005-01-11 15:11 UTC
Votes:7
Avg. Score:5.0 ± 0.0
Reproduced:5 of 5 (100.0%)
Same Version:4 (80.0%)
Same OS:2 (40.0%)
From: per at computer dot org Assigned: jorton (profile)
Status: Closed Package: Apache2 related
PHP Version: 4CVS, 5CVS (?) OS: linux 2.4.26
Private report: No CVE-ID: None
 [2004-10-15 12:25 UTC] per at computer dot org
Description:
------------
virtual() seems to put included code/text in the wrong place.  I'm guessing this is possibly related to bug#30445. 

Reproduce code:
---------------
<html>
<head><title></title></head
<body>
<p>Line0</p1>
<?php
        virtual("i1");
?>
<p>Line2</p>
</body>

----
i1.html:
<p>Line1</p>


Expected result:
----------------
<html>
<head><title></title></head
><body>
<p>Line0</p>
<p>Line1</p>
<p>Line2</p>
</body>

Actual result:
--------------
<p>Line1</p>
<html>
<head><title></title></head
><body>
<p>Line0</p>
<p>Line2</p>
</body>

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-04 21:47 UTC] jorton@php.net
This is a regression since the apache2handler was switched to use ap_r* directly (4.3.9).  Workaround is http://www.apache.org/~jorton/php_virtual.diff.  I want to investigate this a little more before committing, I think it's really a 2.0 bug.
 [2005-01-11 15:11 UTC] jorton@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Thanks for the report, this is now fixed for future 4.3.x, 5.0.x releases.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 13:00:01 2026 UTC