Fixed bug #30446 - virtual() includes files out of sequence, work around 2.0 subrequest/internal redirect issue.