sapi/apache2handler/php_functions.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_functions.c,v 1.15 2004/10/23 13:48:05 jorton Exp $ */
+/* $Id: php_functions.c,v 1.16 2005/01/11 14:01:32 jorton Exp $ */
 
 #define ZEND_INCLUDE_FULL_WINDOWS_HEADERS
 
@@ -65,6 +65,11 @@ static request_rec *php_apache_lookup_uri(char *filename TSRMLS_DC)
 	}
 	
 	ctx = SG(server_context);
+
+	/* Ensure that the ap_r* layer is flushed, to work around 2.0 bug:
+	 * http://issues.apache.org/bugzilla/show_bug.cgi?id=17629 */
+	ap_rflush(ctx->r);
+
 	return ap_sub_req_lookup_uri(filename, ctx->r, ctx->r->output_filters);
 }
 
